tdf#105913: Fix applying DX array to ligatures

Accumulate the width difference for all characters belonging to the
current glyph, not just the first character.

A regression introduced in:

commit 15f6a97d9f23124c19471b9d8dd38f14f53829b3
Author: Khaled Hosny <khaledhosny@eglug.org>
Date:   Sun Sep 11 10:25:46 2016 +0200

    Fix applying DX adjustments in CommonSalLayout

    By overriding GetCharWidths() and ApplyDXArray() with a simpler and
    saner implementation.

    This fixes rendering of Awami Nastaliq, as well as subtending marks in
    Amiri and potentially other bugs.

    Breaks Kashida justification, will need to rewrite that one as well.

    Change-Id: I843679e937f2881e77df61f5cbd9516b6df1b3b6

Change-Id: I419a620f94095238cb87d628032c9fd4be678c1a